fixed scrollbar responsive

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ h1 {
 
 .main {
     position: relative;
+    overflow: hidden;
     height: 100%;
 }
 
